modules/015-admission-policy-engine/charts/constraint-templates/tests/required-probes/disallowed2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  containers:
    - name: foo
      image: gcr.io/app:latest
      readinessProbe:
        tcpSocket:
          port: 8080
        initialDelaySeconds: 5
        periodSeconds: 10
